<resources>
    <string name="app_name">MBEventApp</string>
    <string name="msg_inputtextlayout_email">email</string>
    <string name="msg_button_signin">Entrar</string>
    <string name="msg_textinputlayout_password">Senha</string>
    <string name="msg_textview_logo_app_image">Logo app image</string>
    <string name="msg_imageview_event_image">event poster image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_textview_category_topic">Categoria:</string>
    <string name="msg_textview_event_schedule_topic">Data e Hora:</string>
    <string name="msg_textview_event_price">Preço:</string>
    <string name="msg_textview_event_address_topic">Endereço:</string>

    <string name="error_textinputedittext_email_invalid">Preencha com um email válido</string>
    <string name="error_textinputedittext_password_invalid">Informe uma senha válida</string>
    <string name="error_toast_invalid_login">Login invalido</string>
    <string name="error_toast_invalid_form">Dados inválidos, preencha corretamente</string>
    <string name="error_firebase_getdata">Ops, não foi possível buscar os dados!</string>
</resources>
