<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_logo"
        tools:context=".view.LoginActivity">

    <ImageView
            android:id="@+id/imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/logo"
            android:layout_marginBottom="@dimen/imageviewLogoMargin"
            android:elevation="@dimen/mediumElevation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/msg_textview_logo_app_image"/>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/heavyMargin2"
            android:layout_marginEnd="@dimen/heavyMargin2"
            android:backgroundTint="@color/colorWhiteLogin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
                android:id="@+id/progressbar_loading"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"/>

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/heavyMargin3"
                android:padding="@dimen/mediumPadding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/msg_inputtextlayout_email"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/textinputedittext_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/textinputlayout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/mediumMargin"
                    android:hint="@string/msg_textinputlayout_password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayout_email"
                    app:layout_constraintRight_toRightOf="parent">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/textinputedittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                    android:id="@+id/button_login"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_button_signin"
                    android:layout_marginTop="@dimen/mediumMargin"
                    app:backgroundTint="@color/colorPrimary"
                    app:layout_constraintTop_toBottomOf="@+id/textinputlayout_password"
                    app:layout_constraintRight_toRightOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>